test/replaceIndexOutOfBounds4.slq

def main(){
	x := (0,1,1);
	x[3] ⊕= 1; // error
}
